<resources>
    <string name="app_name">GymBMI</string>
    <string name="title_activity_hangingknee">hangingknee</string>
    <string name="title_activity_declinesitup">Declinesitup</string>
    <string name="info">"BMI Categories:"</string>
    <string name="info1">Underweight = less than 18.5</string>
    <string name="info2">Normal weight = 18.5–24.9 </string>
    <string name="info3">Overweight = 25–29.9</string>
    <string name="info4">Obesity = BMI of 30 or greater</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
